# mppi

./: README.md  meson.build
docs/: meson.build
docs/doxygen/: Doxyfile.in  meson.build
docs/sphinx/: conf.py.in  index.rst  meson.build
include/: comm.hpp  foo.hpp
src/: comm.cpp  foo.cpp  main.cpp  meson.build
tests/: meson.build  test_comm.cpp  test_mpi.cpp
